[project]
name = "deepseek-proxy"
version = "0.1.0"
description = "DeepSeek 网页 API 反代 — OpenAI 兼容端点"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "httpx[socks]>=0.28.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.13.0",
    "wasmtime>=25.0.0",
]

[project.scripts]
deepseek-proxy = "deepseek_proxy.main:cli"

[tool.hatchling]
package-dir = "src"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"